@@ -1,3 +1,7 @@
+2008-04-19  Piotr Fusik  <fox@scene.pl>
+* asap.c, csharp/ASAP.ppcs, java/ASAP.ppjava: refactoring of load_native()
+
+
 2008-04-18  Piotr Fusik  <fox@scene.pl>
 * win32/gui.rc: don't require Windows SDK for building XBMC plugin
 
